--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -52,5 +52,12 @@ body {
   font-size: 15px;
   margin: 0px;
    }
+
+.jumbotron {
+  background-color: #F02475;
+  h1, h2 {
+    font-family: guardian-egyptt, georgia, serif;
   }
-	}
+}
+}
+}
