--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,3 +1,7 @@
+<div class="jumbotron">
+  <h1>Your new favorite plus size destination</h1>
+  <h2>Discover new designers and previously loved fashion</h2>
+</div>
 <div class="center">
   <div class="row">
     <% @listings.each do |listing| %>
