--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -22,6 +22,11 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :category_id %><br>
+    <%= f.collection_select :category_id, Category.all, :id, :name, {prompt: "Choose a category"}, {class: "btn btn-default dropdown-toggle"} %>
+  </div>
+
+  <div class="form-group">
     <%= f.label :description %>
     <%= f.text_area :description, class: "form-control" %>
   </div>
