--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,18 +7,18 @@ body {
 }
 
 .navbar-default {
-  background-color: #F02475;
+  background-color: #F5F5F1;
 }
 
 .navbar-default .navbar-brand {
   font-family: 'Bella Donna', cursive;
   font-weight: bold;
-  color: #050505;
-  font-size: 60px;
+  color: #F02475;
+   font-size: 70px;
 }
 
-.navbar-default .navbar-nav > li > a {
-  font-family: 'Bella Donna', cursive;
+.navbar-default .navbar-nav  {
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
   font-weight: bold;
   color: #050505;
